@@ -1,3 +1,9 @@
+2014-08-21 Andrew Burgess <andrew.burgess@embecosm.com>
+	Adjust mechanism used to restore buffer and window before
+	inserting items from the `kill-ring', this should resolve issues
+	when there are multiple frames or windows open onto the same
+	buffer with different values for point.
+
 2014-08-20 Andrew Burgess <andrew.burgess@embecosm.com>
 	Added variable `browse-kill-ring-highlight-inserted-item-style'
 	which selects the style to use when highlighting the inserted kill
